--- a/ddr_portal/Users/Templates/history_edit.html
+++ b/ddr_portal/Users/Templates/history_edit.html
@@ -194,13 +194,19 @@
       </div>
     </div>
     <div class="right-side">
-      <i class="bi bi-house-door" onclick="location.href='{% url 'admin' %}'"></i>
+      <i class="bi bi-house-door" onclick="location.href='{% url 'role_redirect' %}'"></i>
       <i class="bi bi-person-circle" onclick="location.href='{% url 'profile' %}'"></i>
     </div>
   </div>
 
   <div class="breadcrumbs">
-    <a href="{% url 'admin' %}">Dashboard</a> >
+    {% if role_id == 1 %}
+        <a href="{% url 'admin' %}">Dashboard</a> >
+    {% elif role_id == 2 %}
+        <a href="{% url 'head' %}">Dashboard</a> >
+    {% elif role_id == 3 %}
+        <a href="{% url 'faculty' %}">Dashboard</a> >
+    {% endif %}
     <a href="{% url 'history_index' %}">History Files</a> >
     <span>Edit File</span>
   </div>
