--- a/ddr_portal/Users/Templates/profile.html
+++ b/ddr_portal/Users/Templates/profile.html
@@ -148,7 +148,7 @@
     </div>
     <div class="right-side">
       {% if role_id == 1 %}
-        <i class="bi bi-house-door" onclick="location.href='{% url 'admin' %}'"></i>
+        <i class="bi bi-house-door" onclick="location.href='{% url 'role_redirect' %}'"></i>
     {% elif role_id == 2 %}
         <i class="bi bi-house-door" onclick="location.href='{% url 'head' %}'"></i>
     {% elif role_id == 3 %}
